fix: vehicle/client management